Refactors UnsafeStrategy with MethodHandles
Migrates the `UnsafeStrategy` within `BinaryCodec` to use `MethodHandles` for accessing `sun.misc.Unsafe` methods reflectively.

This enhances robustness and future-proofs the codec against potential stricter restrictions on direct `sun.misc.Unsafe` usage in newer JVM versions. It also removes direct reliance on the restricted API, cleaning up the code.

Improves initialization by adding a fallback to `ReflectionStrategy` if `UnsafeStrategy` fails, such as due to security restrictions, ensuring the codec remains functional.

fixes #772